# rusty_bucket_face

./: .gitignore  Cargo.toml  build.rs  diagram.json  wokwi.toml
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: publish.yml  rust_ci.yml
docs/: README.md
lvgl-configs/: lv_drv_conf.h
scripts/: build.sh  flash.sh
src/: can_messages.rs  cst816s.rs  display_line_buffer_providers.rs  main.rs
src/can_profiles/: can_profile_haltech.json
ui/: api.slint  app.slint  boost_page.slint  common.slint  main.slint  o2_page.slint
ui/components/: display_limits.slint  gauge_renderer.slint  horizontal_carousel.slint  vertical_carousel.slint
ui/pages/: gauge_page.slint  signals_page.slint
