[package]
name = "rusty-bucket-face"
categories = ["embedded", "no-std"]
version = "0.1.0"
authors = ["Ruslan Sovinskyy <ruslan.sovinskyy@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]

# --- ESP ---

esp-hal = { version = "0.21.0", features = [
    "log",
    "esp32s3",
] }

esp-backtrace = { version = "0.14.2", features = [
    "esp32s3",
    "exception-handler",
    "panic-handler",
    "println",
] }

esp-println = { version = "0.12.0", features = ["esp32s3", "log"] }

esp-hal-embassy = { version = "0.4.0", features = ["esp32s3"] }

esp-alloc = { version = "0.5.0" }

esp-wifi = { version = "0.10.1", features = [
    "esp32s3",
    "phy-enable-usb",
    "utils",
    "wifi-default",
] }

xtensa-lx-rt = { version = "0.17.1", features = [
    "esp32s3",
    "float-save-restore",
] }



# --- HAL / Drivers ---

gc9a01-rs = "0.4.1"
embedded-graphics-core = "0.4.0"

embedded-io = "0.6.1"
embedded-hal = "1.0.0"
embedded-hal-bus = "0.2.0"
embedded-hal-async = "1.0.0"

embassy-time = { version = "0.3.2", features = ["generic-queue-8"] }
embassy-executor = { version = "0.6.0", features = ["task-arena-size-262144"] }



# --- App dependencies ---

log = { version = "0.4.21" }

slint = { version = "1.8.0", default-features = false, features = [
    "compat-1-2",
    "unsafe-single-threaded",
    "libm",
    "renderer-software",
] }

static_cell = "2.1.0"


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[build-dependencies]
slint-build = "1.8.0"
