[package]
name = "rusty-bucket-face"
categories = ["embedded", "no-std"]
version = "0.1.0"
authors = ["Ruslan Sovinskyy <ruslan.sovinskyy@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"


[[bin]]
name = "rusty_bucket_face"
path = "./src/main.rs"

[dependencies]

# --- ESP ---

esp-hal = { version = "1.0.0-rc.0", default-features = false, features = [
    "defmt",
    "esp32s3",
    "unstable",
    "rt",
] }

esp-hal-embassy = { version = "0.9.0", features = ["esp32s3", "defmt"] }

esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32s3", "defmt"] }

esp-alloc = { version = "0.8.0" }

xtensa-lx-rt = { version = "0.20.0", features = ["float-save-restore"] }

# --- Debug / loggers ---

defmt = "1.0.1"
panic-rtt-target = { version = "0.2.0", features = ["defmt"] }
rtt-target = { version = "0.6.1", features = ["defmt"] }


# --- HAL / Drivers ---

gc9a01-rs = "0.4.2"
# cst816s = {git = "https://github.com/tstellanova/cst816s.git"}

embedded-graphics = { version = "0.8.1", features = ["defmt"] }

embedded-io = "0.6.1"
embedded-hal = "1.0.0"
embedded-hal-bus = "0.3.0"
embedded-hal-async = "1.0.0"

embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
embassy-futures = { version = "0.1.2", features = ["defmt"] }
embassy-embedded-hal = { version = "0.5.0", features = ["defmt"] }
embassy-executor = { version = "0.7.0", features = [
    "defmt",
    "task-arena-size-20480",
] }


# --- App dependencies ---

slint = { version = "1.12.1", default-features = false, features = [
    "compat-1-2",
    "unsafe-single-threaded",
    "libm",
    "renderer-software",
] }

static_cell = "2.1.1"
embassy-sync = "0.7.2"
embedded-can = "0.4.1"


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[build-dependencies]
slint-build = { version = "1.12.1", features = ["sdf-fonts"] }
